// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EnquiryDetail renders as expected 1`] = `
<FormSection>
  <ProgressIndicator
    sectionName="About your enquiry"
    sectionPosition="Section 1 of 2"
  />
  <TextAreaContainer>
    <Question
      text="What is your lost property enquiry about?"
    />
    <TextArea
      error={null}
      fieldName="enquiryDetail"
      validation={[Function]}
    />
  </TextAreaContainer>
</FormSection>
`;

exports[`EnquiryDetail renders with an error 1`] = `
<FormSection>
  <ProgressIndicator
    sectionName="About your enquiry"
    sectionPosition="Section 1 of 2"
  />
  <TextAreaContainer>
    <Question
      text="What is your lost property enquiry about?"
    />
    <TextArea
      error="Required"
      fieldName="enquiryDetail"
      validation={[Function]}
    />
  </TextAreaContainer>
</FormSection>
`;
